responsive priemra p´rueva

--- a/webactual/index.html
+++ b/webactual/index.html
@@ -3,6 +3,8 @@
 <link rel="icon" href="img/favicon.ico">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0">
   <!-- Las 3 metaetiquetas anteriores * deben * ser lo primero en la cabeza; cualquier otro contenido principal debe venir * después * de estas etiquetas -->
@@ -37,7 +39,7 @@
 
 
 
-          <div class="navbar-brand">
+          <div  class="navbar-brand">
             <a href="index.html"><h1>LUBRICANTES Y ESPECIALIDADES</h1></a>
           </div>
         </div>
@@ -256,10 +258,10 @@
 
 
 
-          <div  class="col-sm-4 col-sm-4 col-xs-4">
+          <div  id="mia" class="col-sm-4 col-sm-4 col-xs-4">
             <div class="service-item">
-              <p text-align : justify;>Es una empresa 100% mexicana que desarrolla tecnologia, fabrica lubricantes sinteticos, grasas y aceites en adicion elabora especialidades para la industria todo esto bajo la marca de <strong>OLLIN</strong> (Movimiento).
-              <img src="img/img2.jpg"><br>
+              <p id="mia1" class="col"text-align : justify;>Es una empresa 100% mexicana que desarrolla tecnologia, fabrica lubricantes sinteticos, grasas y aceites en adicion elabora especialidades para la industria todo esto bajo la marca de <strong>OLLIN</strong> (Movimiento).
+              <img id ="mia"src="img/img2.jpg"><br>
               Desde hace mas de 20 años relativamente joven, nuestra empresa esta formada por personal técnico capacitado en el extranjero, que suma muchos años de experiencia.
               </p>
               <div class="col-sm-3 col-sm-6 col-xs-4">
@@ -269,24 +271,29 @@
             </div>
 
 
-            <div class="col-sm-4 col-sm-6 col-xs-4">
-            <div class="service-item">
-              <p align="justify">Dedica la   mayor parte de su tiempo a la fabricación de lubricantes y grasas a partir de   cualquier base sintética en el mercado. Un 90% de la producción ha sido   desarrollado como substituto de lubricantes de importación.<br>
+            <div  id="mia" class="col-sm-4 col-sm-6 col-xs-4">
+
+
+              <p  align="justify">Dedica la   mayor parte de su tiempo a la fabricación de lubricantes y grasas a partir de   cualquier base sintética en el mercado. Un 90% de la producción ha sido   desarrollado como substituto de lubricantes de importación.<br>
               Hoy gracias a los avances de la tribología, <strong>TRIBOQUIMIA</strong> ha logrado mantenerse a la par con las compañías   extranjeras en cuanto a la reducción de la fricción y el desgaste. Los sectores de investigación/desarrollo y aseguramiento de calidad han puesto a punto después de 2 años de pruebas en campo el <strong>FORTIFICADOR FZ</strong>, el cual forma parte de la llamada tercera generación de lubricantes.<br>
               Todos nuestros lubricantes y grasas tienen incorporado este aditivo, con lo cual nuestros productos se alejan mas de los lubricantes convencionales que funcionan, formando capas blandas de metal u óxidos que impiden un contacto directo de los elementos friccionantes. No obstante, dichas   capas se van desgastando debido a la solicitud mecánica, por lo que deben ser restituidas, con frecuencia. De ahí que la desventaja de esta tecnología resida en el gran consumo de material y aditivos (primera generación de lubricantes).
             </p>
-            </div>
+
           </div>
 
-          <div class="col-sm-4 col-sm-4 col-xs-1">
-            <div class="service-item">
-              <p align="justify">NO tiene representantes ni distribuidores exclusivos en el país sus clientes principales son fabricantes de lubricantes convencionales o distribuidores mayoristas, los cuales complementan sus líneas de productos con los desarrollos de <strong>TRIBOQUIMIA</strong>, por lo tanto no existe un requisito formal para ser distribuidor de nuestros productos debido a que quienes compran estos materiales los reenvasan y reetiquetan comercializándolos con su propia marca.<br>
-              <img align="absbottom" src="img/oil12.jpg">
+
+          <div id="mia"  class="col-sm-4 col-sm-4 col-xs-1">
+
+
+
+              <p  align="justify">NO tiene representantes ni distribuidores exclusivos en el país sus clientes principales son fabricantes de lubricantes convencionales o distribuidores mayoristas, los cuales complementan sus líneas de productos con los desarrollos de <strong>TRIBOQUIMIA</strong>, por lo tanto no existe un requisito formal para ser distribuidor de nuestros productos debido a que quienes compran estos materiales los reenvasan y reetiquetan comercializándolos con su propia marca.<br>
+              <img id="mia11" align="absbottom" src="img/oil12.jpg">
               </p>
 
 
 
-</div>
+
+
 
             </div>
           </div>
@@ -298,13 +305,13 @@
 
 
 
-  <footer>
-    <div class="container">
-      <div class="col-md-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
-        <h4>Acerca de Nosotros</h4>
+  <footer >
+    <div  class="container">
+      <di   class="col-md-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
+        <h4 id="mia">Acerca de Nosotros</h4>
 
-        <div class="contact-info">
-          <ul>
+        <div  class="contact-info">
+          <ul id="mia">
           <li><i class="fa fa-home fa"></i>&nbsp;Calle Miguel Hidalgo No.104 Col. Benito Juarez C.P.54940 Tultitlan Estado de México.</li><br>
           <li><i class="fa fa-phone fa"></i>&nbsp;01 55 5884 9102</li>
             <li><i class="fa fa-envelope fa"></i>&nbsp;triboquimia@gmail.com</li>
@@ -312,7 +319,7 @@
         </div>
       </div>
 
-      <div class="col-md-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
+      <div  id="mia44"class="col-md-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
         <div class="text-center">
           <h4>galeria de </h4>
           <ul class="sidebar-gallery">
@@ -329,10 +336,12 @@
         </div>
       </div>
 
-      <div class="col-md-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="900ms">
-        <div>
+      <div  id="mia44"class="col-md-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="900ms">
+        <div class="col">
+
+
       <h4>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;!Nuestro Mundo Contiene Todo¡</h4>
-      <iframe width="400" height="315"
+      <iframe id="mia" width="400" height="315"
       src="https://www.youtube.com/embed/_7FvdNJTqoc"
       frameborder="0" allow="autoplay; encrypted-media"
       allowfullscreen></iframe>
